# mantis

./: .clang-format  CONTRIBUTORS.md  README.md  meson.build  meson_options.txt
example/: basic.cc  complex_double.cc
include/: mantis.hpp
include/mantis/: binary_notation-impl.hpp  binary_notation.hpp  complex-impl.hpp  complex.hpp  decimal_notation-impl.hpp  decimal_notation.hpp  double_mantissa-impl.hpp  double_mantissa.hpp  enable_if.hpp  fpu_fix-impl.hpp  fpu_fix.hpp  macros.hpp  scientific_notation-impl.hpp  scientific_notation.hpp  util-impl.hpp  util.hpp
include/mantis/double_mantissa/: class-impl.hpp  math-impl.hpp  std_extension-impl.hpp  std_math-impl.hpp  std_normal_distribution-impl.hpp  std_numeric_limits-impl.hpp  std_random-impl.hpp  std_uniform_real_distribution-impl.hpp
scripts/: run-clang-format.sh
test/: double_mantissa.cc
