#
# Copyright (c) 2019 Jack Poulson <jack@hodgestar.com>
#
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at http://mozilla.org/MPL/2.0/.
#

option('disable_gcc_fma',
    type : 'boolean',
    value : false,
    description : 'disable GCC FMA intrinsic fallback?')

option('disable_xlc_fma',
    type : 'boolean',
    value : false,
    description : 'disable XLC FMA intrinsic fallback?')
